tree-sitter-baseline/grammar.js
    source_file: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.module_decl,
      $.prelude_decl, // @prelude(script)
      $.import_decl,
      $._definition,
      $.spec_block,
      $.inline_test,
      $.describe_block,
      $.test_section
    ),

    // --- Declarations ---

    // Spec 7.1: @module Name, allows optional @ to match examples
    type_def: $ => seq(
      optional('export'),
      'type', field('name', $.type_identifier),
      optional($.type_params),
      '=',
      choice(
        field('def', $.variant_list),
        seq(field('def', $._type_expr), optional($.refinement_clause))
      )
    ),

    // Sum type variants: | A | B(T) or A | B | C
    variant_list: $ => choice(
      repeat1(seq('|', $.variant)),
      seq($.variant, repeat1(seq('|', $.variant)))
    ),

    variant: $ => seq(
      field('name', $.type_identifier),
      optional(seq('(', commaSep1($._type_expr), ')'))
    ),

    // explicit node for highlighting
    refinement_clause: $ => seq('where', $.predicate),

    // fn fizzbuzz(n: Int) -> String = body
    // fn identity<T>(x: T) -> T = x
    function_def: $ => seq(
      optional('export'),
      'fn', field('name', $._name),
      optional($.type_params),
      '(', optional(field('params', $.param_list)), ')',
      optional(seq('->', optional(field('effects', $.effect_set)), field('return_type', $._type_expr))),
      '=', field('body', $._expression)
    ),

    param_list: $ => commaSep1($.param),
    param: $ => seq(field('pattern', $._pattern), ':', field('type', $._type_expr)),

    _type_expr: $ => choice(
      $.type_identifier,
      $.generic_type,
      $.option_type,
      $.tuple_type,
      $.record_type,
      $.function_type
    ),

    generic_type: $ => seq($.type_identifier, '<', commaSep1($._type_expr), '>'),
    tuple_type: $ => seq('(', commaSep($._type_expr), ')'),
    record_type: $ => seq('{', commaSep($.record_field_def), optional(seq(',', $.row_variable)), '}'),
    _field_name: $ => choice($.identifier, $.string_literal),
    record_field_def: $ => seq($._field_name, ':', $._type_expr),
    row_variable: $ => seq('..', $.identifier),
    function_type: $ => seq('(', commaSep($._type_expr), ')', '->', $._type_expr),

    type_params: $ => seq('<', commaSep1($.type_param), '>'),

    type_param: $ => seq(
      field('name', $.type_identifier),
      optional(seq(':', field('bounds', $.trait_bound_list)))
    ),

    _expression: $ => choice(
      $.pipe_expression,
      $.match_expression,
      $.if_expression,
      $.for_expression,
      $.with_expression,
      $.handle_expression,
      $.restrict_expression,
      $.binary_expression,
      $.unary_expression,
      $.try_expression,
      $.call_expression,
      $.field_expression,
      $.range_expression,
      $.literal,
      $._name, // includes identifier and effect_identifier
      $.type_identifier, // for nullary constructors: Active, None
      $.list_expression,
      $.struct_expression, // User { id: 1 }
      $.tuple_expression,
      $.record_update,    // { ..record, field: newValue }
      $.record_expression,
      $.block,
      $.lambda,
      $.parenthesized_expression,
      $.hole_expression,
      $.expect_expression,
      $.map_literal,
      $.set_literal
    ),

    // [1, 2, 3]
    field_expression: $ => prec.left(PREC.MEMBER, seq(
      $._expression,
      '.',
      choice($.identifier, $.effect_identifier)
    )),

    // f(x, y) or f(name: "Alice", age: 30)
    // $._call_lparen is an external token that matches '(' only when NO newline
    // appears between it and the preceding token. This prevents newline-separated
    // expressions from being parsed as call arguments: `42\n(a, b)` is NOT a call.
    binary_expression: $ => choice(
      prec.left(PREC.ADDITIVE, seq($._expression, choice('+', '-', '++'), $._expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice('*', '/', '%'), $._expression)),
      prec.left(PREC.COMPARE, seq($._expression, choice('==', '!=', '<', '>', '<=', '>='), $._expression)),
      prec.left(PREC.LOGICAL_AND, seq($._expression, '&&', $._expression)),
      prec.left(PREC.LOGICAL_OR, seq($._expression, '||', $._expression))
    ),

    unary_expression: $ => prec(PREC.UNARY, seq(choice('not', '-'), $._expression)),

    // expr? — unwrap Option/Result or propagate error
    _pattern: $ => choice(
      $.identifier,
      $.type_identifier, // Matches nullary constructors: None, Active
      $.constructor_pattern, // Matches constructors with payload: Some(v)
      $.literal,
      $.tuple_pattern,
      $.wildcard_pattern,
      $.record_pattern,
      $.list_pattern
    ),
    predicate: $ => $._expression,

    literal: $ => choice($.float_literal, $.integer_literal, $.multiline_string_literal, $.string_literal, $.raw_string_literal, $.raw_hash_string_literal, $.boolean_literal),
    float_literal: $ => token(seq(/\d+/, '.', /\d+/, optional(seq(/[eE]/, optional(/[+-]/), /\d+/)))),
    integer_literal: $ => token(choice(
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,   // hex: 0xFF, 0x1A_2B
      /0[bB][01][01_]*/,                   // binary: 0b1010, 0b1111_0000
      /0[oO][0-7][0-7_]*/,                 // octal: 0o755, 0o77_77
      /[0-9][0-9_]*/,                      // decimal: 42, 1_000_000
    )),
    boolean_literal: $ => choice('true', 'false'),

    // Recursive Interpolation: "Hello ${name}"
    string_literal: $ => seq(
      $.string_start,
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.interpolation
      )),
      $.string_end
    ),
    // Triple-quoted multi-line strings: """..."""
    interpolation: $ => seq('${', $._expression, '}'),
    escape_sequence: $ => token.immediate(seq('\\', /./)),

    // Raw strings: r"..." (no escapes, no interpolation)
    identifier: $ => /[a-z_][a-z0-9_]*/,
    _name: $ => choice($.identifier, $.effect_identifier),
    type_identifier: $ => /[A-Z][a-zA-Z0-9]*/,

    // --- Comments ---
