tree-sitter-baseline/test/corpus/literals.txt
================================================================================
Integer literal
================================================================================

fn id(x: Int) -> Int = 42

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (integer_literal))))

================================================================================
Negative integer (unary expression)
================================================================================

fn id(x: Int) -> Int = -17

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (unary_expression
      (literal
        (integer_literal)))))

================================================================================
Float literal
================================================================================

fn id(x: Int) -> Int = 3.14

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (float_literal))))

================================================================================
Scientific notation float
================================================================================

fn id(x: Int) -> Int = 1.5e10

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (float_literal))))

================================================================================
Boolean literal true
================================================================================

fn id(x: Int) -> Boolean = true

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (boolean_literal))))

================================================================================
Boolean literal false
================================================================================

fn id(x: Int) -> Boolean = false

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (boolean_literal))))

================================================================================
Simple string literal
================================================================================

fn id(x: Int) -> String = "Hello, World"

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (string_literal
        (string_start)
        (string_content)
        (string_end)))))

================================================================================
String with escape sequences
================================================================================

fn id(x: Int) -> String = "Line 1\nLine 2"

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (string_literal
        (string_start)
        (string_content)
        (escape_sequence)
        (string_content)
        (string_end)))))

================================================================================
String with escaped quotes
================================================================================

fn id(x: Int) -> String = "Say \"hello\""

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (string_literal
        (string_start)
        (string_content)
        (escape_sequence)
        (string_content)
        (escape_sequence)
        (string_end)))))

================================================================================
String interpolation
================================================================================

fn id(x: Int) -> String = "Hello, ${name}"

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (string_literal
        (string_start)
        (string_content)
        (interpolation
          (identifier))
        (string_end)))))

================================================================================
Complex string interpolation
================================================================================

fn id(x: Int) -> String = "${a} + ${b} = ${a + b}"

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (string_literal
        (string_start)
        (interpolation
          (identifier))
        (string_content)
        (interpolation
          (identifier))
        (string_content)
        (interpolation
          (binary_expression
            (identifier)
            (identifier)))
        (string_end)))))
