tree-sitter-baseline/test/corpus/types.txt
================================================================================
Type alias
================================================================================

type UserId = Int
type Email = String

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (type_identifier))
  (type_def
    name: (type_identifier)
    def: (type_identifier)))

================================================================================
Generic type alias with tuple
================================================================================

type Pair<A, B> = (A, B)

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    (type_params
      (type_param
        name: (type_identifier))
      (type_param
        name: (type_identifier)))
    def: (tuple_type
      (type_identifier)
      (type_identifier))))

================================================================================
Sum type with leading pipe
================================================================================

type Option<T> =
  | Some(T)
  | None

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    (type_params
      (type_param
        name: (type_identifier)))
    def: (variant_list
      (variant
        name: (type_identifier)
        (type_identifier))
      (variant
        name: (type_identifier)))))

================================================================================
Sum type with multiple type parameters
================================================================================

type Result<T, E> =
  | Ok(T)
  | Err(E)

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    (type_params
      (type_param
        name: (type_identifier))
      (type_param
        name: (type_identifier)))
    def: (variant_list
      (variant
        name: (type_identifier)
        (type_identifier))
      (variant
        name: (type_identifier)
        (type_identifier)))))

================================================================================
Sum type without leading pipe
================================================================================

type Status = Active | Inactive | Pending

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (variant_list
      (variant
        name: (type_identifier))
      (variant
        name: (type_identifier))
      (variant
        name: (type_identifier)))))

================================================================================
Record type
================================================================================

type User = {
  name: String,
  age: Int,
  email: String,
}

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (record_type
      (record_field_def
        (identifier)
        (type_identifier))
      (record_field_def
        (identifier)
        (type_identifier))
      (record_field_def
        (identifier)
        (type_identifier)))))

================================================================================
Refinement type
================================================================================

type Port = Int where self > 0

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (type_identifier)
    (refinement_clause
      (predicate
        (binary_expression
          (identifier)
          (literal
            (integer_literal)))))))

================================================================================
Generic refinement type
================================================================================

type NonEmpty<T> = List<T> where self > 0

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    (type_params
      (type_param
        name: (type_identifier)))
    def: (generic_type
      (type_identifier)
      (type_identifier))
    (refinement_clause
      (predicate
        (binary_expression
          (identifier)
          (literal
            (integer_literal)))))))

================================================================================
Function type
================================================================================

type BinaryOp = (Int, Int) -> Int

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (function_type
      (type_identifier)
      (type_identifier)
      (type_identifier))))

================================================================================
Single argument function type
================================================================================

type Transform = (Int) -> String

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (function_type
      (type_identifier)
      (type_identifier))))

================================================================================
Export type
================================================================================

export type User = {
  name: String,
  age: Int,
}

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (record_type
      (record_field_def
        (identifier)
        (type_identifier))
      (record_field_def
        (identifier)
        (type_identifier)))))

================================================================================
Open record type with row variable
================================================================================

type HasName = { name: String, ..r }

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (record_type
      (record_field_def
        (identifier)
        (type_identifier))
      (row_variable
        (identifier)))))

================================================================================
Open record with multiple fields and row variable
================================================================================

type HasNameAge = { name: String, age: Int, ..rest }

--------------------------------------------------------------------------------

(source_file
  (type_def
    name: (type_identifier)
    def: (record_type
      (record_field_def
        (identifier)
        (type_identifier))
      (record_field_def
        (identifier)
        (type_identifier))
      (row_variable
        (identifier)))))

================================================================================
Function with row-polymorphic parameter
================================================================================

fn greet(person: { name: String, ..r }) -> String =
  person.name

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (record_type
          (record_field_def
            (identifier)
            (type_identifier))
          (row_variable
            (identifier)))))
    return_type: (type_identifier)
    body: (field_expression
      (identifier)
      (identifier))))
